--- a/app.json
+++ b/app.json
@@ -1,5 +1,9 @@
 {
   "expo": {
-    "sdkVersion": "27.0.0"
+    "sdkVersion": "27.0.0",
+    "name": "molli",
+    "slug": "molli",
+    "version": "0.1.0",
+    "description": ""
   }
 }
