--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
-    "react-navigation": "^2.11.2"
+    "react-navigation": "^2.11.2",
+    "rn-sliding-up-panel": "^1.2.1"
   }
 }
