--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.14.0",
     "jest-expo": "~27.0.0",
+    "react-native-scripts": "^1.14.1",
     "react-test-renderer": "16.3.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "eslint": "^5.3.0",
-    "expo": "^27.0.1",
+    "expo": "^29.0.0",
     "fortnite-api": "^2.12.2",
     "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react-native": "^0.56.0",
     "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
     "react-navigation": "^2.11.2",
