--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "eslint": "^5.3.0",
     "expo": "^27.0.1",
+    "firebase": "^5.3.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-deck-swiper": "^1.5.17",
