--- a/app.json
+++ b/app.json
@@ -4,6 +4,9 @@
     "name": "molli",
     "slug": "molli",
     "version": "0.1.0",
-    "description": ""
+    "description": "",
+    "facebookScheme": "fb1926350514326999",
+    "facebookAppId": "1926350514326999",
+    "facebookDisplayName": "molli"
   }
 }
