--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "eslint": "^5.3.0",
     "expo": "^27.1.1",
     "firebase": "^5.3.1",
