--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "eslint": "^5.3.0",
     "expo": "^27.1.1",
     "firebase": "^5.3.1",
+    "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-form": "^0.1.1",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2",
     "react-player": "^1.6.4",
     "rn-sliding-up-panel": "^1.2.1"
