--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-form": "^0.1.1",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-native-snap-carousel": "^3.7.2",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2",
     "react-player": "^1.6.4",
