--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "eslint": "^5.3.0",
-    "expo": "^27.1.1",
+    "expo": "27.0.0",
     "firebase": "^5.3.1",
     "native-base": "^2.7.2",
     "react": "16.3.1",
-    "react-native": "^0.56.0",
+    "react-native": "0.55.0",
     "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-form": "^0.1.1",
