--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "create-react-class": "^15.6.3",
     "eslint": "^5.3.0",
     "expo": "^27.1.1",
     "firebase": "^5.3.1",
@@ -28,7 +29,9 @@
     "react-native": "~0.55.2",
     "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
+    "react-native-form-builder": "^1.0.15",
     "react-native-gifted-form": "^0.1.1",
+    "react-native-hpicker": "^1.0.5",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-snap-carousel": "^3.7.2",
     "react-native-vector-icons": "^5.0.0",
