--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "create-react-class": "^15.6.3",
+    "emoji-utils": "^1.0.1",
     "eslint": "^5.3.0",
     "expo": "^27.1.1",
     "firebase": "^5.3.1",
@@ -30,6 +31,7 @@
     "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
     "react-native-form-builder": "^1.0.15",
+    "react-native-gifted-chat": "^0.4.3",
     "react-native-gifted-form": "^0.1.1",
     "react-native-hpicker": "^1.0.5",
     "react-native-linear-gradient": "^2.4.0",
