stable alert on win

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-navigation": "^2.11.2",
     "react-player": "^1.6.4",
     "rn-popup": "^1.0.4",
-    "rn-sliding-up-panel": "^1.2.1"
+    "rn-sliding-up-panel": "^1.2.1",
+    "firebase-functions": "^2.0.0",
+    "fortnite-api": "^2.12.2"
   }
 }
