--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "eslint": "^5.3.0",
     "expo": "^27.1.1",
     "firebase": "^5.3.1",
+    "firebase-functions": "^2.0.0",
+    "fortnite-api": "^2.12.2",
     "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-credit-card": "^0.1.9",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-deck-swiper": "^1.5.17",
     "react-native-elements": "^0.19.1",
     "react-native-form-builder": "^1.0.15",
@@ -41,7 +45,6 @@
     "react-player": "^1.6.4",
     "rn-popup": "^1.0.4",
     "rn-sliding-up-panel": "^1.2.1",
-    "firebase-functions": "^2.0.0",
-    "fortnite-api": "^2.12.2"
+    "stripe-client": "^1.1.5"
   }
 }
