--- a/functions/package.json
+++ b/functions/package.json
@@ -10,13 +10,16 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "csv-parse": "^2.5.0",
+    "express": "^4.16.3",
     "firebase-admin": "~5.13.0",
     "firebase-functions": "^2.0.0",
     "fortnite-api": "^2.12.2",
     "fs": "0.0.1-security",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "stripe": "^6.7.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
