--- a/app.json
+++ b/app.json
@@ -8,7 +8,6 @@
     "facebookScheme": "fb1926350514326999",
     "facebookAppId": "1926350514326999",
     "facebookDisplayName": "Molli",
-    "orientation": "portrait",
-    "icon": "https://i.imgur.com/xVcqHua.png"
+    "orientation": "portrait"
   }
 }
